tests/fail/open_with_multiple_refs_as_single_threaded.stderr
error[E0432]: unresolved import `rocksdb`
 --> tests/fail/open_with_multiple_refs_as_single_threaded.rs:1:5
  |
  |
9 |     db_ref2.create_cf("cf2", &opts).unwrap();
  |     ^^^^^^^ `db_ref2` is a `&` reference, so the data it refers to cannot be borrowed as mutable
1 | use rocksdb::{SingleThreaded, DBWithThreadMode, Options};
  |     ^^^^^^^ use of undeclared crate or module `rocksdb`
